syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Skaifai/gophers-microservice/product-service/pkg/proto";

message Product {
  int64 id = 1;
  string name = 2;
  float price = 3;
  string description = 4;
  string category = 5;
  int32 quantity = 6;
  bool is_available = 7;
  google.protobuf.Timestamp creation_date = 8;
  int32 version = 9;
}

message Filters {
  int32 page = 1;
  int32 page_size = 2;
  string sort = 3;
  repeated string sort_safe_list = 4;
}

message Metadata {
  int32 current_page = 1;
  int32 page_size = 2;
  int32 first_page = 3;
  int32 last_page = 4;
  int32 total_records = 5;
}

service ProductService {
  rpc ShowProduct(ShowProductRequest) returns (ShowProductResponse);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
  rpc AddProduct(AddProductRequest) returns (AddProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
}

message ShowProductRequest {
  int64 id = 1;
}

message ShowProductResponse {
  Product product = 1;
}

message ListProductsResponse {
  Metadata metadata = 1;
  repeated Product products = 2;
}

message ListProductsRequest {
  string name = 1;
  string category = 2;
  Filters filters = 3;
}

message AddProductRequest {
  Product product = 1;
}

message AddProductResponse {
  Product product = 1;
}

message UpdateProductRequest {
  Product product = 2;
}

message UpdateProductResponse {
  string message = 1;
}

message DeleteProductRequest {
  int64 id = 1;
}

message DeleteProductResponse {
  string message = 1;
}